// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing of Readme component render Readme with language = javascript 1`] = `
"# Account Service

## Overview

This service is in charge of processing user signups

- **Version:** 1.0.0
- **Server URL:** ws://api.example.com


## Installation

Install dependencies:

\`\`\`bash
npm install
\`\`\`


## Usage

\`\`\`javascript
const AccountServiceClient = require('./myClient');

// throwSendErrors defaults to true: a failed send re-throws after the registered
// error handlers run, so you can react to each failure. Pass
// new AccountServiceClient(undefined, false) to keep a high-throughput producer loop
// running and rely on registered error handlers instead.
const wsClient = new AccountServiceClient();

async function main() {
  try {
    await wsClient.connect();
    // use wsClient to send/receive messages
    await wsClient.close();
  } catch (error) {
    console.error('Failed to connect or send:', error);
  }
}

main();
\`\`\`


## API

### \`connect()\`
Establishes a WebSocket connection.

### \`registerMessageHandler(handlerFunction)\`
Registers a callback for incoming messages.

### \`registerErrorHandler(handlerFunction)\`
Registers a callback for connection errors.

### \`close()\`
Closes the WebSocket connection.


### Available Operations

#### \`sendUserSignedup(payload)\`"
`;

exports[`Testing of Readme component render Readme with language = python 1`] = `
"# Account Service

## Overview

This service is in charge of processing user signups

- **Version:** 1.0.0
- **Server URL:** ws://api.example.com


## Installation

Install dependencies:

\`\`\`bash
pip install -r requirements.txt
\`\`\`


## Usage

\`\`\`python
from myClient import AccountServiceClient

# raise_send_errors defaults to True: a failed send raises after the registered
# error handlers run, so you can react to each failure. Pass
# raise_send_errors=False to keep a high-throughput producer loop running and
# rely on registered error handlers instead.
ws_client = AccountServiceClient()

async def main():
    await ws_client.connect()
    try:
        # use ws_client to send/receive messages
        pass
    except Exception as error:
        # only reached when raise_send_errors is True (the default)
        print(\\"Send failed:\\", error)
    await ws_client.close()
\`\`\`


## API

### \`connect()\`
Establishes a WebSocket connection.

### \`register_message_handler(handler_function)\`
Registers a callback for incoming messages.

### \`register_error_handler(handler_function)\`
Registers a callback for connection errors.

### \`close()\`
Closes the WebSocket connection.


### Available Operations

#### \`sendUserSignedup(payload)\`"
`;
